<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MeasureActivity">

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:text="@string/stateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dia_pressure_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/btn_devices_text"
        app:layout_constraintBottom_toTopOf="@+id/ev_username"
        app:layout_constraintStart_toEndOf="@+id/tv_state"
        app:layout_constraintTop_toBottomOf="@id/tv_dia_pressure_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/text_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ev_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shape_border"
        android:ems="1"
        android:gravity="center_vertical"
        android:hint="@string/text_hint_input"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/btn_input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_devices"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"/>

    <Button
        android:id="@+id/btn_input_name"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/text_btn_input"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toEndOf="@id/ev_username"
        app:layout_constraintTop_toBottomOf="@+id/btn_devices" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/text_measure_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_input_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_devices" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_shape_title"
        android:gravity="center"
        android:text="@string/text_title"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ev_username" />

    <TextView
        android:id="@+id/tv_dia_pressure_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_shape_subtitle"
        android:gravity="center"
        android:text="@string/text_dia_pressure"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/tv_sys_pressure_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_sys_pressure_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_shape_subtitle"
        android:gravity="center"
        android:text="@string/text_sys_pressure"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dia_pressure_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_dia_pressure"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_shape_number"
        android:gravity="center"
        android:text="@string/text_default_pressure"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/tv_sys_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dia_pressure_title"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_sys_pressure"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_shape_number"
        android:gravity="center"
        android:text="@string/text_default_pressure"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_dia_pressure"
        app:layout_constraintTop_toBottomOf="@id/tv_sys_pressure_title" />

    <TextView
        android:id="@+id/tv_level_reference"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:text="@string/preference_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dia_pressure" />

    <TextView
        android:id="@+id/tv_receive"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_border"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/receiveAreaHint"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_level_reference" />

    <Button
        android:id="@+id/btn_clear_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/btn_clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_receive" />

    <Switch
        android:id="@+id/sw_hex_ascii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sw_hex_ascii_text"
        app:layout_constraintStart_toEndOf="@id/btn_clear_receive"
        app:layout_constraintTop_toBottomOf="@id/tv_receive" />
</androidx.constraintlayout.widget.ConstraintLayout>